<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/container_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_btnFavorite">
            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/dummy_judul_film"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintTop_toBottomOf="@id/detail_btnFavorite"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title"/>
        <TextView
            android:id="@+id/detail_releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dummy_releaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintTop_toBottomOf="@id/detail_title"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/container_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintTop_toBottomOf="@id/detail_releaseDate">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_rating"/>
                <TextView
                    android:id="@+id/detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dummy_rating"
                    android:layout_marginStart="3dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/detail_containerOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/container_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/label_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/label_overview"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_below="@id/label_overview"/>
                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_overview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/dummy_loremIpsum"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detail_btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/blue"
            app:borderWidth="0dp"
            android:src="@drawable/ic_favorite_outline"
            app:layout_constraintTop_toBottomOf="@id/detail_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/detail_backdrop"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>